--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,104 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:mask="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:mask="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="20dp"
+    android:background="@drawable/bggame2"
     tools:context=".presentation.activities.AuthActivity">
 
-    <TextView
-        android:id="@+id/text_welcome"
+
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/start_text"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:visibility="visible"
-        tools:visibility="visible" />
+        android:layout_height="0dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/imgreg"
+        android:translationZ="100dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintDimensionRatio="5:2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-    <EditText
-        android:id="@+id/user_name"
-        android:layout_marginTop="20dp"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:visibility="visible"
-        android:hint="@string/edit_name"/>
-
+        android:layout_height="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:layout_margin="15dp"
+        android:background="#4E4E92"
+        android:orientation="vertical"
+        android:paddingHorizontal="10dp"
+        android:paddingTop="40dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.312">
 
-        <Spinner
-            android:id="@+id/spinner"
+        <TextView
+            android:id="@+id/text_welcome"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/start_text"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            android:visibility="visible"
+            tools:visibility="visible" />
 
-        <br.com.sapereaude.maskedEditText.MaskedEditText
-            android:id="@+id/user_phone"
+        <LinearLayout
+            android:id="@+id/ll_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:typeface="monospace"
-            mask:allowed_chars="1234567890"
-            mask:mask="##########"
-            tools:visibility="visible"
-            android:hint="9999999999"
-            />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edittextbg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <!--        <Spinner-->
+            <!--            android:id="@+id/spinner"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content" />-->
+
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/ccp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:ccp_contentColor="@color/white"
+                app:ccp_customMasterCountries="RU,KZ,UA"
+                mask:ccp_defaultNameCode="RU" />
+
+            <EditText
+                android:id="@+id/user_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/flag_transparent"
+                android:hint="Ваш номер телефона"
+                android:inputType="phone"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
 
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:text="Код города вводить не нужно!"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_authorization"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/red"
+            android:text="@string/btn_get_sms"
+            android:textColor="@color/white"
+            android:textSize="14dp"
+            tools:visibility="visible" />
+
+        <EditText
+            android:id="@+id/edit_sms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edittextbg"
+            android:hint="@string/edit_sms"
+            android:inputType="number"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:visibility="gone"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_error_sms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/error_sms"
+            android:textColor="@color/red"
+            android:textSize="14dp"
+            android:visibility="gone"
+            tools:visibility="gone" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_check_sms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/red"
+            android:text="@string/btn_check_sms"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            tools:visibility="gone" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/red"
+            android:text="@string/btn_back"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            tools:visibility="gone" />
 
     </LinearLayout>
 
-
-
-    <Button
-        android:id="@+id/btn_authorization"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        tools:visibility="visible"
-        android:text="@string/btn_get_sms"/>
-
-    <EditText
-        android:id="@+id/edit_sms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/edit_sms"
-        android:inputType="number"
-        android:visibility="gone"
-        tools:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/text_error_sms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/error_sms"
-        android:textSize="14dp"
-        android:textColor="@color/red"
-        android:visibility="gone"
-        tools:visibility="gone" />
-
-    <Button
-        android:id="@+id/btn_check_sms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"
-        tools:visibility="gone"
-        android:text="@string/btn_check_sms"/>
-
-    <Button
-        android:id="@+id/btn_back"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"
-        tools:visibility="gone"
-        android:text="@string/btn_back"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
