--- a/app/src/main/res/layout/activity_slots.xml
+++ b/app/src/main/res/layout/activity_slots.xml
@@ -100,24 +100,24 @@
         app:layout_constraintVertical_bias="1.0" />
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_promt"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/btn_promt"-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
 
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/btn_question"
-        android:minWidth="40dp"
-        android:minHeight="40dp"
-        android:text=" ? "
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:background="@drawable/btn_question"-->
+<!--        android:minWidth="40dp"-->
+<!--        android:minHeight="40dp"-->
+<!--        android:text=" ? "-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="20dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 
     <TextView
